--- a/index.html
+++ b/index.html
@@ -4,9 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>Login form</title>
 </head>
 <body>
+    <div class="login-box">
+        <h2>Login</h2>
+        <form action="">
+            <div class="user-box">
+                <input type="text" required="">
+                <label>Username</label>
+            </div>
+            <div class="user-box">
+                <input type="password" required="">
+                <label>Password</label>
+            </div>
+            <a href="#">
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                Submit
+            </a>
+        </form>
+    </div>
     
 </body>
 </html>
